--- a/.github/workflows/test_ci.yml
+++ b/.github/workflows/test_ci.yml
@@ -11,37 +11,21 @@ on:
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
 
-# A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-  # This workflow contains a single job called "build"
   build:
-    # The type of runner that the job will run on
     runs-on: ubuntu-latest
-    timeout-minutes: 10
-
-    # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
-      - name: Repo code check out
       - uses: actions/checkout@v2
-
-      - name: Setup Python
-        uses: actions/setup-python@v2
-        with:
-          python-version: "3.x"
+      - name: Install Python 3
       
-      - name: Install pipenv
-        run: |
-          python -m pip install --upgrade pipenv wheel
-      - id: cache-pipenv
-        uses: actions/cache@v1
+        uses: actions/setup-python@v1
         with:
-          path: ~/.local/share/virtualenvs
-          key: ${{ runner.os }}-pipenv-${{ hashFiles('**/Pipfile.lock') }}
-
+          python-version: 3.6
+          
       - name: Install dependencies
-        if: steps.cache-pipenv.outputs.cache-hit != 'true'
         run: |
-          pipenv install -deploy --dev
-      - name: Run test suite
-        run: |
-          pipenv run test -v
+          python -m pip install --upgrade pip
+          pip install -r requirements.txt
+          
+      - name: Run tests with pytest
+        run: pytest 
