--- a/app.yaml
+++ b/app.yaml
@@ -14,6 +14,12 @@
 
 runtime: python39
 
+env_variables:
+  CLOUD_SQL_USERNAME: proj-2-database-mysql
+  CLOUD_SQL_PASSWORD: test1234
+  CLOUD_SQL_DATABASE_NAME: demo
+  CLOUD_SQL_CONNECTION_NAME: ece-461-project-2-22:us-east1:proj-2-database-mysql
+
 handlers:
   # This configures Google App Engine to serve the files in the app's static
   # directory.
