--- a/requirements.txt
+++ b/requirements.txt
@@ -50,6 +50,9 @@ Pillow==8.3.2
 pluggy==1.0.0
 proto-plus==1.19.7
 protobuf==3.19.1
+psycopg2==2.8.3
+psycopg2-binary==2.8.3
+PyMySQL==0.9.3
 py==1.11.0
 pyasn1==0.4.8
 pyasn1-modules==0.2.8
