--- a/.github/workflows/test_ci.yml
+++ b/.github/workflows/test_ci.yml
@@ -26,6 +26,7 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install -r test_requirements.txt
+          python3 main.py
           
       - name: Run tests with pytest
         run: pytest 
