--- a/.github/workflows/test_ci.yml
+++ b/.github/workflows/test_ci.yml
@@ -26,6 +26,13 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install -r test_requirements.txt
+      
+      - name: Set up Cloud SDK
+        uses: google-github-actions/setup-gcloud@master
+        with:
+          project_id: ${{ secrets.GCP_PROJECT_ID }}
+          service_account_key: ${{ secrets.GCP_SA_KEY }}
+          export_default_credentials: true
           
       - name: Run tests with pytest
         run: pytest 
