--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 aniso8601==9.0.1
 asgiref==3.4.1
 attrs==21.2.0
+bs4==0.0.1
 cachetools==4.2.4
 certifi==2021.10.8
 cffi==1.15.0
@@ -81,5 +82,6 @@ toml==0.10.2
 typing-extensions==3.10.0.2
 typing-inspect==0.7.1
 urllib3==1.26.7
+validators==0.18.2
 Werkzeug==2.0.2
 wrapt==1.13.3
