--- a/requirements.txt
+++ b/requirements.txt
@@ -25,6 +25,7 @@ google-api-core==2.2.2
 google-auth==2.0.0
 google-cloud-core==2.1.0
 google-cloud-datastore==2.3.0
+google-cloud-secret-manager==2.8.0
 google-cloud-storage==1.42.3
 google-crc32c==1.3.0
 google-re2==0.2.20210901
