--- a/app.yaml
+++ b/app.yaml
@@ -14,6 +14,8 @@
 
 runtime: python39
 
+instance_class: F2
+
 env_variables:
   CLOUD_SQL_USERNAME: proj-2-database-mysql
   CLOUD_SQL_PASSWORD: test1234
